--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,11 @@
-# Object files
 *.o
-*.ko
-*.obj
-*.elf
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
+*.diff
+server
+client
+cscope*
+Debug/*
+.settings
+.cproject
+.project
+.idea/*
+CMakeLists.txt
